--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -200,7 +200,9 @@
               <p class="form-hint hidden" data-error-for="use_album"></p>
             </div>
           </div>
-          <p class="text-xs text-zinc-500">Padrões: MarkdownV2, delay 0, sem watermark, produção.</p>
+          <p id="defaults-hint" style="margin-top:12px;font-size:12px;opacity:.8">
+            <strong>Padrões:</strong> MarkdownV2, delay 0, sem watermark, produção (rate 60 rpm).
+          </p>
           <div class="flex flex-col gap-3 sm:flex-row sm:justify-end">
             <button type="button" class="btn-secondary sm:flex-1" data-close-modal="bot-modal">Fechar</button>
             <button type="submit" id="create-bot-btn" class="btn-primary sm:flex-1">Criar Bot</button>
