--- a/shots-modals.html
+++ b/shots-modals.html
@@ -98,18 +98,9 @@
             </div>
           </div>
 
-          <!-- Mídia Opcional -->
+          <!-- Mídias (1-3) -->
           <div>
-            <label class="block text-sm font-medium mb-2">Mídia (opcional)</label>
-            <div class="flex gap-3">
-              <input 
-                type="text" 
-                id="shot-file-id" 
-                class="input flex-1" 
-                placeholder="file_id da mídia (foto/vídeo)"
-              />
-            </div>
-            <p class="text-xs text-zinc-500 mt-1">Deixe vazio para enviar apenas texto</p>
+            <div id="shot-multi-media-container"></div>
           </div>
 
           <!-- Quando Enviar -->
